<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FMS(File Management System)</string>
    <string name="images">Images</string>
    <string name="audios">Audios</string>
    <string name="movies">Movies</string>
    <string name="documents">Docs</string>
    <string name="zipfiles">Zips</string>
    <string name="apkfiles">APKs</string>
    <string name="menu_refresh">Rescan</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_unfilter">Unfilter</string>
    <string name="menu_search">Filter By Name</string>
    <string name="contextMenu">Share or Delete</string>
    <string name="Start">Start</string>
    <string name="Close">Close</string>
</resources>